--- a/package.json
+++ b/package.json
@@ -23,5 +23,14 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^9.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "envify": "^4.1.0",
+    "terser": "^5.16.1",
+    "uglifyify": "^5.0.2"
   }
 }
